name:                Taiji-view
version:             0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2018 Kai Zhang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable taiji-view
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -Wall

  other-modules:       Taiji.View.Types
                       Taiji.View.Commands
                       Taiji.View.Commands.Rank
                       Taiji.View.Commands.Rank.Visualize
                       Taiji.View.Commands.Network
                       Taiji.View.Utils

  build-depends:
      base >= 4.7 && < 5
    , bioinformatics-toolkit >= 0.5.0
    , bytestring
    , bytestring-lexing
    , case-insensitive
    , cereal
    , colour
    , clustering
    , double-conversion
    , diagrams-core
    , diagrams-lib
    , diagrams-cairo
    , haskell-igraph >= 0.7.0
    , matrices
    , optparse-applicative
    , palette
    , statistics >= 0.14.0
    , text
    , SVGFonts
    , vector
    , unordered-containers
    , Taiji-types

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/taiji-view
