name:                Taiji-view
version:             0.1.0
synopsis:            Visualization framework for Taiji
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2018-2019 Kai Zhang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable taiji-view
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -Wall

  other-modules:       Taiji.View.Types
                       Taiji.View.Commands.QC
                       Taiji.View.Commands.Rank
                       Taiji.View.Utils

  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bioinformatics-toolkit >= 0.6.0
    , bytestring
    , bytestring-lexing
    , case-insensitive
    , cereal
    , colour
    , clustering
    , double-conversion
    , diagrams-core
    , diagrams-lib
    , diagrams-cairo
    , haskell-igraph >= 0.7.0
    , inline-r
    , matrices
    , optparse-applicative
    , palette
    , statistics >= 0.14.0
    , shelly
    , text
    , SVGFonts
    , vector
    , unordered-containers
    , Taiji-types

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/taiji-view
